--- a/index.html
+++ b/index.html
@@ -2,12 +2,95 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Cold Email Generator | Generate Effective Cold Emails Effortlessly</title>
+
+    <!-- Meta Description -->
+    <meta
+      name="description"
+      content="Cold Email Generator helps you craft professional and effective cold emails in seconds. Perfect for outreach, business proposals, and networking!"
+    />
+
+    <!-- Keywords -->
+    <meta
+      name="keywords"
+      content="cold email generator, email automation, outreach tool, professional emails, business emails, email templates, cold email software"
+    />
+
+    <!-- Author -->
+    <meta name="author" content="Devesh Shukla" />
+
+    <!-- Open Graph (OG) Meta Tags for Social Media Sharing -->
+    <meta property="og:title" content="Cold Email Generator | Generate Effective Cold Emails Effortlessly" />
+    <meta
+      property="og:description"
+      content="Craft professional and effective cold emails in seconds with the Cold Email Generator. Ideal for outreach, networking, and proposals."
+    />
+    <meta property="og:image" content="/android-chrome-192x192.png" />
+    <meta property="og:url" content="https://imdeveshshukla.me/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Cold Email Generator | Generate Effective Cold Emails Effortlessly" />
+    <meta
+      name="twitter:description"
+      content="Craft professional and effective cold emails in seconds with the Cold Email Generator. Ideal for outreach, networking, and proposals."
+    />
+    <meta name="twitter:image" content="/twitter-image.png" />
+    <meta name="twitter:site" content="@imdeveshshukla" />
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://yourwebsite.com/" />
+
+    <!-- Robots Meta Tag -->
+    <meta name="robots" content="index, follow" />
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "Cold Email Generator",
+        "url": "https://yourwebsite.com/",
+        "description": "Craft professional and effective cold emails in seconds with the Cold Email Generator. Ideal for outreach, networking, and proposals.",
+        "image": "https://yourwebsite.com/og-image.png",
+        "author": {
+          "@type": "Organization",
+          "name": "Your Company"
+        },
+        "applicationCategory": "Productivity",
+        "offers": {
+          "@type": "Offer",
+          "price": "0.00",
+          "priceCurrency": "USD"
+        }
+      }
+    </script>
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LZXXDSLMLP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-LZXXDSLMLP');
+    </script>
   </body>
 </html>
