--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       content="Craft professional and effective cold emails in seconds with the Cold Email Generator. Ideal for outreach, networking, and proposals."
     />
     <meta property="og:image" content="/android-chrome-192x192.png" />
-    <meta property="og:url" content="https://imdeveshshukla.me/" />
+    <meta property="og:url" content="https://writemail.vercel.app/" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Meta Tags -->
@@ -47,7 +47,7 @@
     <link rel="manifest" href="/site.webmanifest" />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://yourwebsite.com/" />
+    <link rel="canonical" href="https://writemail.vercel.app/" />
 
     <!-- Robots Meta Tag -->
     <meta name="robots" content="index, follow" />
@@ -58,9 +58,9 @@
         "@context": "https://schema.org",
         "@type": "WebApplication",
         "name": "Cold Email Generator",
-        "url": "https://yourwebsite.com/",
+        "url": "https://writemail.vercel.app/",
         "description": "Craft professional and effective cold emails in seconds with the Cold Email Generator. Ideal for outreach, networking, and proposals.",
-        "image": "https://yourwebsite.com/og-image.png",
+        "image": "https://writemail.vercel.app/android-chrome-192x192.png",
         "author": {
           "@type": "Organization",
           "name": "Your Company"
